# novel-to-toon

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.claude/hooks/: cost-monitor.sh
docs/: claude-agent-sdk-guide.md  google-genai-guide.md  job-log.md  research-character-consistency.md  research-cost-reduction.md  research-spending-tracking.md  specification.md
poc/: CHANGELOG.md
poc/acceptance-criteria/: PLAN.md  RUNBOOK.md
poc/acceptance-criteria/reports/: RETRO_BASELINE.md  comparison.json  evaluation_v0.1.0.json  evaluation_v0.2.0.json
poc/acceptance-criteria/scripts/: run_evaluation.py
poc/workflow-0.1.0/: spec.md
poc/workflow-0.1.0/phase1_characters/: phase1_results.json  prompts.md
poc/workflow-0.1.0/phase2_style/: phase2_results.json  prompt_templates.json  style_spec.json  style_validation_checklist.json
poc/workflow-0.1.0/phase3_backgrounds/: lighting_presets.json  phase3_results.json
poc/workflow-0.1.0/phase4_storyboard/: panel_templates.json  phase4_results.json
poc/workflow-0.1.0/phase5_generation/: phase5_results.json
poc/workflow-0.1.0/scripts/: background_generator.py  character_generator.py  panel_generator.py  storyboard_generator.py  style_agent.py
poc/workflow-0.2.0/: BFL_AI_ANALYSIS.md  COST_ANALYSIS.md  IMAGE_MODEL_COMPARISON.md  PLATFORM_COMPARISON.md  RESOLUTION_PRICING.md  SESSION_SUMMARY.md  spec.md
poc/workflow-0.2.0/phase1_characters/: phase1_results.json
poc/workflow-0.2.1/: PLAN.md
source/001/: 001.txt  002.txt  003.txt  004.txt  005.txt  006.txt  007.txt  008.txt  009.txt  010.txt
(+144 files in other folders)
